Fixing Spacing Between Sub Menu

--- a/src/_patterns/00-nds/02-molecules/navigation/navigation-local/navigation-local.scss
+++ b/src/_patterns/00-nds/02-molecules/navigation/navigation-local/navigation-local.scss
@@ -121,6 +121,9 @@
                             }
                         }
                     }
+                    & + .collapse {
+                        margin-top: $s-0-50;
+                    }
                     .card-header-button {
                         .arrow {
                             padding-right: $s-1;
